<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="12345"
        android:id="@+id/text_anim"
        android:layout_margin="5dp"
        android:gravity="center|center_vertical|center_horizontal"
        android:textSize="48dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="733dp"
        android:layout_height="107dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher"
        android:focusable="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_21"
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:focusable="false"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_22"
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:enabled="true" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_23"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_24"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:enabled="true" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_25"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:focusable="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/screen_26"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:longClickable="false"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:singleLine="false" />
    </TableRow>

</TableLayout>